force-app/main/default/objects/Case/fields/Case_Category__c.field-meta.xml
<CustomField>
    <fullName>Case_Category__c</fullName>
    <description>Subtype of Case Type to help further break down the type of Case</description>
    <label>Case Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>200 OK</fullName>
                <isActive>false</isActive>
                <label>200 OK</label>
            </value>
            <value>
                <fullName>404 Error</fullName>
            </value>
            <value>
                <fullName>500 Error</fullName>
            </value>
            <value>
                <fullName>Access</fullName>
            </value>
            <value>
                <fullName>Accounts - Add or Change</fullName>
            </value>
            <value>
                <fullName>Admin Settings</fullName>
            </value>
            <value>
                <fullName>Admin Training</fullName>
            </value>
            <value>
                <fullName>ADS/ADAS</fullName>
            </value>
            <value>
                <fullName>After-treatment DEF Dosing System</fullName>
                <isActive>false</isActive>
                <label>After-treatment DEF Dosing System</label>
            </value>
            <value>
                <fullName>After-treatment Regen or Soot Load Issue</fullName>
                <isActive>false</isActive>
                <label>After-treatment Regen or Soot Load Issue</label>
            </value>
            <value>
                <fullName>After-treatment SCR Efficiency</fullName>
                <isActive>false</isActive>
                <label>After-treatment SCR Efficiency</label>
            </value>
            <value>
                <fullName>Air Management</fullName>
                <isActive>false</isActive>
                <label>Air Management</label>
            </value>
            <value>
                <fullName>Assembly Breakdown</fullName>
            </value>
            <value>
                <fullName>Asset</fullName>
            </value>
            <value>
                <fullName>At Service Provider</fullName>
                <isActive>false</isActive>
                <label>At Service Provider</label>
            </value>
            <value>
                <fullName>Axle</fullName>
            </value>
            <value>
                <fullName>Axle Weldment</fullName>
            </value>
            <value>
                <fullName>Battery Electric Vehicle</fullName>
            </value>
            <value>
                <fullName>Block Assembly</fullName>
                <isActive>false</isActive>
                <label>Block Assembly</label>
            </value>
            <value>
                <fullName>Brakes/Air System</fullName>
                <isActive>false</isActive>
                <label>Brakes/Air System</label>
            </value>
            <value>
                <fullName>Branch / Site / Account Failure</fullName>
            </value>
            <value>
                <fullName>Cabs/Hoods/Glass</fullName>
                <isActive>false</isActive>
                <label>Cabs/Hoods/Glass</label>
            </value>
            <value>
                <fullName>Campaign</fullName>
            </value>
            <value>
                <fullName>Campaign Creation</fullName>
            </value>
            <value>
                <fullName>CARS</fullName>
            </value>
            <value>
                <fullName>CARSReport</fullName>
            </value>
            <value>
                <fullName>Chassis</fullName>
                <isActive>false</isActive>
                <label>Chassis</label>
            </value>
            <value>
                <fullName>Chassis Assessment per Bulletin</fullName>
            </value>
            <value>
                <fullName>Chassis Order Inquiry</fullName>
            </value>
            <value>
                <fullName>Chassis Part Request</fullName>
                <isActive>false</isActive>
                <label>Chassis Part Request</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>