force-app/main/default/objects/Case/fields/CSR_Number__c.field-meta.xml
<CustomField>
    <fullName>CSR_Number__c</fullName>
    <description>CSR Number / Header Promo Code</description>
    <label>CSR Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>