force-app/main/default/objects/Case/fields/csr_Phase__c.field-meta.xml
<CustomField>
    <fullName>csr_Phase__c</fullName>
    <description>deleting as new custom object created</description>
    <label>Phase</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>