force-app/main/default/objects/Case/fields/Store_Group_Level__c.field-meta.xml
<CustomField>
    <fullName>Store_Group_Level__c</fullName>
    <label>Store/Group Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Store</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>