force-app/main/default/objects/Case/fields/Tread_Descriptions__c.field-meta.xml
<CustomField>
    <fullName>Tread_Descriptions__c</fullName>
    <description>Tread categories for Roadside Feedback cases</description>
    <inlineHelpText>Tread categories for Roadside Feedback cases</inlineHelpText>
    <label>Tread Descriptions</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Case_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Steering</fullName>
                <label>01. Steering</label>
            </value>
            <value>
                <fullName>Suspension</fullName>
                <label>02. Suspension</label>
            </value>
            <value>
                <fullName>ServiceBrake</fullName>
                <label>03. ServiceBrake</label>
            </value>
            <value>
                <fullName>ServiceBRakeAir</fullName>
                <label>04. ServiceBRakeAir</label>
            </value>
            <value>
                <fullName>ParkingBRake</fullName>
                <label>05. ParkingBRake</label>
            </value>
            <value>
                <fullName>EngAngEngCooling</fullName>
                <label>06. EngAngEngCooling</label>
            </value>
            <value>
                <fullName>FuelSys</fullName>
                <label>07. FuelSys</label>
            </value>
            <value>
                <fullName>FuelSysDiesel</fullName>
                <label>08. FuelSysDiesel</label>
            </value>
            <value>
                <fullName>FuelSysOther</fullName>
                <label>09. FuelSysOther</label>
            </value>
            <value>
                <fullName>PowerTrain</fullName>
                <label>10. PowerTrain</label>
            </value>
            <value>
                <fullName>Electrical</fullName>
                <label>11. Electrical</label>
            </value>
            <value>
                <fullName>ExtLighting</fullName>
                <label>12. ExtLighting</label>
            </value>
            <value>
                <fullName>Visibility</fullName>
                <label>13. Visibility</label>
            </value>
            <value>
                <fullName>AirBags</fullName>
                <label>14. AirBags</label>
            </value>
            <value>
                <fullName>SeatBelts</fullName>
                <label>15. SeatBelts</label>
            </value>
            <value>
                <fullName>Structure</fullName>
                <label>16. Structure</label>
            </value>
            <value>
                <fullName>Latch</fullName>
                <label>17. Latch</label>
            </value>
            <value>
                <fullName>SpeedControl</fullName>
                <label>18. SpeedControl</label>
            </value>
            <value>
                <fullName>TiresRelated</fullName>
                <label>19. TiresRelated</label>
            </value>
            <value>
                <fullName>Wheels</fullName>
                <label>20. Wheels</label>
            </value>
            <value>
                <fullName>TrailerHitch</fullName>
                <label>21. TrailerHitch</label>
            </value>
            <value>
                <fullName>Seats</fullName>
                <label>22. Seats</label>
            </value>
            <value>
                <fullName>FireRelated</fullName>
                <label>23. FireRelated</label>
            </value>
            <value>
                <fullName>Rollover</fullName>
                <label>24. Rollover</label>
            </value>
            <value>
                <fullName>ESC_RSC</fullName>
                <label>25. ESC_RSC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>